--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -74,8 +74,65 @@ h2{
     margin: 50px 0 20px 0;
 }
 
-.content-description{
+.content-description, .content-price{
     font-size: 20px;
     color: #FCFAF9;
     line-height: 34px;
+}
+
+.big-price{
+    position: relative;
+    color: #FCFAF9;
+    font-size: 65px;
+    font-weight: bold;
+    line-height: 52px;
+    top: 20px;
+}
+
+.ios-button{
+    position: absolute;
+    background-color: #191826;
+    color: #FCFAF9;
+    width: 333px;
+    height: 61px;
+    border-radius: 12px;
+    border-style: none;
+    top: 450px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.apple-icon{
+    position: absolute;
+    left: 80px;
+}
+
+.android-button{
+    position: absolute;
+    background-color: #FCFAF9;
+    color: #191826;
+    width: 333px;
+    height: 61px;
+    border-radius: 12px;
+    border-style: none;
+    top: 530px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.android-icon{
+    position: absolute;
+    left: 65px;
+}
+
+.footer{
+    position: absolute;
+    top: 1700px;
+    display: flex;
+    justify-content: space-between;
+    height: 100px;
+}
+
+.footer-content{
+    flex-basis: 30%;
 }
